progress1; may just redo the whole thing in the SAME method as described in class, but instead of starting witht the form I'm going to Instead just start with a modal and from there go to a form page, becuase I realize Im getting stuck on one thing which is an animation troubleshooting that I dont want to waste time, that we dont have, over trying to fix when we have a full app to build

--- a/assets/css/meetU-style.css
+++ b/assets/css/meetU-style.css
@@ -1,3 +1,47 @@
-footer {
-    visibility: hidden;
+
+.container-fluid {
+    text-align: center;
+    margin-top: 61.80px;
+   
+}
+
+
+
+
+.animate {
+    -ms-zoom-animation: default;
+    i
+}
+
+
+h1{
+    font-weight: bolder;
+    
+}
+
+#screenDelta {
+    border-radius: 12px;
+    background-color: gray;
+    color: goldenrod;
+    margin-left: 303px;
+    margin-right: 303px;
+    padding-top: 46.23px;
+    padding-bottom: 46.23px;
+    font-weight: bolder;
+}
+
+input {
+    background-color: goldenrod;
+}
+
+#user-submitInit {
+    border-radius: 8px;
+    background-color: black;
+    color: goldenrod;
+    font-weight: bold;
+}
+
+.initInputInfo {
+    visibility: visible;
+    
 }
